계산로직 추가